代码更正
将题目表和选项表之间的关联去掉
