# swagger/swagger.json
@@ -29,7 +29,7 @@
                         "description": "QuestionBody",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AllQuestion"
+                            "$ref": "#/definitions/models.AllQuestionResult"
                         }
                     }
                 ],
@@ -39,6 +39,23 @@
                     },
                     "403": {
                         "description": "Add fail"
+                    }
+                }
+            }
+        },
+        "/question/getAllQuestion": {
+            "get": {
+                "tags": [
+                    "question"
+                ],
+                "description": "Get All Question From DB",
+                "operationId": "QuestionController.GetAllQuestion",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.AllQuestionResult"
+                        }
                     }
                 }
             }
@@ -143,6 +160,30 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "Question": {
+                    "type": "string"
+                },
+                "QuestionType": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.AllQuestionResult": {
+            "title": "AllQuestionResult",
+            "type": "object",
+            "properties": {
+                "Answer": {
+                    "type": "string"
+                },
+                "Category": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "Options": {
                     "type": "array",
                     "items": {
@@ -162,8 +203,9 @@
             "title": "Option",
             "type": "object",
             "properties": {
-                "AllQuestion": {
-                    "$ref": "#/definitions/models.AllQuestion"
+                "AllQuestionId": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "Check": {
                     "type": "string"
